[tool.poetry]
name = "yaj-assistant"
version = "0.1.0"
description = "YAJ Assistant"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
