[tool.poetry]
name = "yaj-assistant"
version = "0.1.0"
description = "YAJ Assistant"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
alembic = "^1.13.1"
redis = "^5.0.0"
loguru = "^0.7.0"
sqlmodel = "^0.0.8"
pydantic = "^1.10.21"
starlette = "^0.27.0"
anyio = "^4.8.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
